2006-02-13  Roland Dreier  <rdreier@cisco.com>

	* examples/asyncwatch.c, examples/device_list.c,
	examples/devinfo.c: Remove cpu_to_be64()/be64_to_cpu() and use
	htonll()/ntohll() from <infiniband/arch.h>.

2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>

	* src/cmd.c (ibv_cmd_query_qp, ibv_cmd_query_srq),
	include/infiniband/driver.h: Add driver interface for calling
	query QP and query SRQ kernel commands.

	* include/infiniband/kern-abi.h: Add kernel ABI for query QP and
	query SRQ.

	* src/verbs.c (ibv_query_qp, ibv_query_srq),
	include/infiniband/verbs.h: Add query QP and query SRQ library
	APIs.  This changes the provider ABI, since new fields are added
	to struct ibv_context_ops; source compatibility with provider
	libraries is preserved, but binaries will have to be recompiled.
	Neither source nor binary compatibility with consumers of
	libibverbs is affected.

2006-02-01  Roland Dreier  <rdreier@cisco.com>

	* examples/rc_pingpong.c, examples/uc_pingpong.c,
	examples/ud_pingpong.c, examples/srq_pingpong.c: Fix bug in
	searching for device by name when there's more than one device.

2006-01-31  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h, include/infiniband/driver.h: Remove
	useless "extern" from function declarations.

2006-01-26  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/driver.h, src/cmd.c (ibv_cmd_resize_cq): Add
	driver interface for calling resize CQ kernel command.

	* include/infiniband/kern-abi.h: Add resize CQ kernel ABI.

	* include/infiniband/verbs.h, src/verbs.c (ibv_resize_cq): Add
	resize CQ library API.  This changes the provider ABI, since a new
	field is added to struct ibv_context_ops; source compatibility
	with provider libraries is preserved, but binaries will have to be
	recompiled.  Neither source nor binary compatibility with
	consumers of libibverbs is affected.

2006-01-25  Roland Dreier  <rdreier@cisco.com>

	* examples/pingpong.c, examples/pingpong.h,