@@ -1,3 +1,8 @@
+2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>
+
+	* examples/devinfo.c (print_hca_cap): Print board_id from sysfs,
+	if present.
+
 2006-02-13  Roland Dreier  <rdreier@cisco.com>
 
 	* examples/asyncwatch.c, examples/device_list.c,
